--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <label for="date-input">Selecione o Dia:</label>
         <input type="date" id="date-input">
     </div>
-</div>
+    
+    <div class="time-slider-container">
+        <label for="time-slider">Hora Selecionada: <span id="current-time-display">--:--</span></label>
+        <input type="range" id="time-slider" min="0" max="0" value="0" step="1" disabled>
+    </div>
+    </div>
 
 <div class="main-content">
     
