--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="header-container">
-    <h1>Previsão do Vento para o Surf e Kite</h1>
+    <h1>Radar de Marolas Divertidas</h1>
     <div class="date-selector">
         <label for="date-input">Selecione o Dia:</label>
         <input type="date" id="date-input">
